--- a/app/src/main/res/layout/s2exercise1.xml
+++ b/app/src/main/res/layout/s2exercise1.xml
@@ -6,21 +6,21 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical">
+        android:layout_height="wrap_content">
 
         <TextView
             android:id="@+id/textView6"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/message" />
+            android:text="@string/name" />
 
-        <Button
-            android:id="@+id/button12"
+        <EditText
+            android:id="@+id/editTextText3"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text="@string/b1" />
+            android:ems="10"
+            android:inputType="text" />
 
     </LinearLayout>
 
@@ -30,18 +30,41 @@
         android:orientation="horizontal">
 
         <TextView
-            android:id="@+id/textView8"
+            android:id="@+id/textView12"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/lt"
-            android:textAppearance="@android:style/TextAppearance.Large" />
+            android:layout_weight="0"
+            android:text="@string/password" />
 
-        <Button
-            android:id="@+id/button16"
-            android:layout_width="match_parent"
+        <EditText
+            android:id="@+id/editTextTextPassword"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text="@string/b2" />
+            android:ems="10"
+            android:inputType="textPassword" />
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+
+
+        <Button
+            android:id="@+id/button11"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="0"
+            android:text="@string/login" />
+
+        <Button
+            android:id="@+id/button17"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="0"
+            android:text="@string/cancel" />
     </LinearLayout>
 
 </LinearLayout>
